// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisaRequired renders with empty array 1`] = `null`;

exports[`VisaRequired renders with one country in the array 1`] = `
<Alert
  title={
    <Translation
      id="mmb.visa_state.visa_is_required"
    />
  }
  type="danger"
>
  <Text
    style={
      Object {
        "color": "#d0021b",
        "fontSize": 12,
        "fontWeight": "600",
      }
    }
  >
    <Translation
      passThrough="Peru"
    />
  </Text>
</Alert>
`;

exports[`VisaRequired renders with several countries in the array 1`] = `
<Alert
  title={
    <Translation
      id="mmb.visa_state.visa_is_required"
    />
  }
  type="danger"
>
  <Text
    style={
      Object {
        "color": "#d0021b",
        "fontSize": 12,
        "fontWeight": "600",
      }
    }
  >
    <Translation
      passThrough="Norway"
    />
  </Text>
  <Text
    style={
      Object {
        "color": "#d0021b",
        "fontSize": 12,
        "fontWeight": "600",
      }
    }
  >
    <Translation
      passThrough="Spain"
    />
  </Text>
  <Text
    style={
      Object {
        "color": "#d0021b",
        "fontSize": 12,
        "fontWeight": "600",
      }
    }
  >
    <Translation
      passThrough="Catalunya"
    />
  </Text>
</Alert>
`;
